--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <header class="mastheadtr">
 <header class="masthead4">
-  <h4 class="Mn">< 1 ,<a href="Vinculo/index.html#1">2</a> ></h6>
+  <h4 class="Mn">< 1 ,<a href="Vinculo/Pagina2.html#1">2</a> ></h6>
 </header>
 </header>
                     </div>
