--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#1">
            <center>
           <h1 class="animate__animated animate__bounceInLeft">
-          <img src="https://static.wikia.nocookie.net/mario/images/2/24/Champi%C3%B1%C3%B3n.png/revision/latest/scale-to-width-down/340?cb=20100909154147&path-prefix=es" alt="Zoom en CSS3"  class="img2 container4 Flecha post-centro zoomea lazyloaded"></img>
+          <img src="https://w7.pngwing.com/pngs/138/767/png-transparent-super-mario-bros-new-super-mario-bros-mario-kart-wii-mario-bros-super-mario-bros-computer-wallpaper-video-game.png" alt="Zoom en CSS3"  class="img2 container4 Flecha post-centro zoomea lazyloaded"></img>
           </h1>
            </center>
            </a>
